package com.urise.webapp.model;

public interface Section {

    void asText();
}
