@startuml
class Resume {
uuid : String
fullName : String
sections : Map<SectionType, Section>
contacts : ArrayList<Contact>
}
Resume *-- Section
interface Section {
asText()
}
Resume *- Contact
class Contact {
type : ContactType
value : String
link : String
}
Contact *-- ContactType
enum ContactType {
TELEPHONE
SKYPE
EMAIL
LINKEDIN
GITHUB
STACKOVERFLOW
HOMEPAGE
}
Section <|-- ListSection
Section <|-- StringSection
Section <|-- PeriodSection
ListSection *-- SectionType
StringSection *-- SectionType
PeriodSection *-- SectionType
enum SectionType {
    CONTACTS
    PERSONAL
    OBJECTIVE
    ACHIEVEMENT
    QUALIFICATIONS
    EXPERIENCE
    EDUCATION
}
PeriodSection *-- PeriodInfo
class ListSection {
content : ArrayList<String>
asText()
}
class StringSection {
content : String
asText()
}

class PeriodSection {
content : ArrayList<PeriodInfo>
asText()
}
class PeriodInfo {
title : String
    start : LocalDate
    finish : LocalDate
    description : String
}

@enduml
